Attribute glitches while using Attribute Proximity node #85493

Closed
opened 2021-02-09 10:47:04 +01:00 by Miro Horváth · 6 comments

Blender Version
Broken:
blender-2.93.0-eab9165c2512-windows64

Short description of error
Blender 2021-02-09 10-34-10.mp4

Exact steps for others to reproduce the error
bug.blend

**Blender Version** Broken: blender-2.93.0-eab9165c2512-windows64 **Short description of error** [Blender 2021-02-09 10-34-10.mp4](https://archive.blender.org/developer/F9746157/Blender_2021-02-09_10-34-10.mp4) **Exact steps for others to reproduce the error** [bug.blend](https://archive.blender.org/developer/F9746195/bug.blend)
Author

Added subscriber: @MiroHorvath

Added subscriber: @MiroHorvath
Author

This comment was removed by @MiroHorvath

*This comment was removed by @MiroHorvath*

Added subscriber: @victorlouis

Added subscriber: @victorlouis

Found the problem, it's caused by doing distance_span.fill(FLT_MAX); inside the parallelized loop. I'll submit a fix.

Found the problem, it's caused by doing `distance_span.fill(FLT_MAX);` inside the parallelized loop. I'll submit a fix.

This issue was referenced by 722790e8d2

This issue was referenced by 722790e8d23091e776d67c5e27c9719923b2f4c3
Member

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Hans Goudey self-assigned this 2021-02-09 23:25:15 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85493
No description provided.